--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -1087,6 +1087,12 @@ ul.gn-resultview {
         margin-left: 4px;
       }
     }
+    [gn-related] {
+      display: inline-block;
+      .btn-group {
+        vertical-align: initial;
+      }
+    }
     h3 {
       padding-bottom: .5em;
       color: #000;
